--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
-        "lcobucci/jwt": "3.3.3"
+        "lcobucci/jwt": "3.3.3",
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
