--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "brotzka/laravel-dotenv-editor": "^2.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.4",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
