--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
         "lcobucci/jwt": "3.3.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
